Simplify full match soccer lay strategy
